[gd_scene load_steps=5 format=3 uid="uid://w2l13b1625f6"]

[ext_resource type="Script" uid="uid://73xnoo570ynw" path="res://Scripts/UI/RightPanel/animation_tab.gd" id="1_e52ib"]
[ext_resource type="PackedScene" uid="uid://qjip1w7hh1ss" path="res://UI/EditorUI/LeftUI/Components/AnimationPanel.tscn" id="2_kcx3q"]
[ext_resource type="PackedScene" uid="uid://clxl1gighe78l" path="res://UI/BetterSlider/better_slider.tscn" id="4_3iye5"]
[ext_resource type="Script" uid="uid://dy1cd6xda1pu5" path="res://UI/BetterSlider/BetterToggles.gd" id="4_ryas8"]

[node name="AnimationTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_e52ib")
metadata/_tab_index = 0

[node name="Scroll" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Scroll/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6
metadata/_edit_use_anchors_ = true

[node name="Label4" type="Label" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TR_ANIMATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentSelVbox" parent="Scroll/MarginContainer/VBoxContainer" instance=ExtResource("2_kcx3q")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="Sp5" type="HSeparator" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TR_ANIMATION_RESET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 8
columns = 2

[node name="AnimationReset" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TR_RESET_ANIMATION_TOOLTIP"
theme_override_font_sizes/font_size = 16
text = "TR_RESET_ANIMATION"

[node name="AnimationOneShot" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TR_ANIMATION_ONE_SHOT_TOOLTIP"
theme_override_font_sizes/font_size = 16
text = "TR_ANIMATION_ONE_SHOT"

[node name="ResetonStateChange" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TR_RESET_ON_STATE_CHANGE_TOOLTIP"
theme_override_font_sizes/font_size = 14
text = "TR_RESET_ON_STATE_CHANGE"

[node name="Sp4" type="HSeparator" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Effects" type="Label" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TR_EFFECTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectsGrid" type="GridContainer" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 8
columns = 2

[node name="Rainbow" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/EffectsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_RAINBOW"
script = ExtResource("4_ryas8")
sp_type = ""
value_to_update = "rainbow"

[node name="Self-Rainbow Only" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/EffectsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_EFFECT_SELF_RAINBOW"
script = ExtResource("4_ryas8")
sp_type = ""
value_to_update = "rainbow_self"

[node name="RSLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/EffectsGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "TR_EFFECT_RAINBOW_SPEED"

[node name="RSSlider" type="HSlider" parent="Scroll/MarginContainer/VBoxContainer/EffectsGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -1.0
max_value = 1.0
step = 0.001
value = 0.001

[node name="Sp6" type="HSeparator" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SheetControls" type="Label" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SpriteSheet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NonAnimatedSheetCheck" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "TR_NONE_ANIMATED_SHEET_TOOLTIP"
theme_override_font_sizes/font_size = 16
text = "TR_NONE_ANIMATED_SHEET"

[node name="FrameHBox" type="HBoxContainer" parent="Scroll/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FrameLabel" type="Label" parent="Scroll/MarginContainer/VBoxContainer/FrameHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "TR_FRAME_LABEL"

[node name="FrameSpinbox" type="SpinBox" parent="Scroll/MarginContainer/VBoxContainer/FrameHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 12.0

[node name="GridContainer2" type="GridContainer" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="AnimateToMouse" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TR_ANIMATE_TO_MOUSE_TOOLTIP"
text = "TR_ANIMATE_TO_MOUSE"
script = ExtResource("4_ryas8")
sp_type = "Sprite2D"
value_to_update = "animate_to_mouse"

[node name="AnimateToMouse2" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TR_MOVE_WITH_MOUSE_TOOLTIP"
text = "TR_MOVE_WITH_MOUSE"
script = ExtResource("4_ryas8")
sp_type = "Sprite2D"
value_to_update = "animate_to_mouse_track_pos"

[node name="BetterSlider" parent="Scroll/MarginContainer/VBoxContainer" instance=ExtResource("4_3iye5")]
layout_mode = 2
sp_type = "Sprite2D"
label_text = "TR_ANIMATION_SPEED"
mini_value = 0.01
max_value = 250.0
step = 0.01
value = 1.0
value_to_update = "animate_to_mouse_speed"

[node name="GridContainer3" type="GridContainer" parent="Scroll/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Fade" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TR_MOVE_WITH_MOUSE_TOOLTIP"
text = "Fade"
script = ExtResource("4_ryas8")
sp_type = ""
value_to_update = "fade"

[node name="Fade2" type="CheckBox" parent="Scroll/MarginContainer/VBoxContainer/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TR_MOVE_WITH_MOUSE_TOOLTIP"
text = "Fade Asset "
script = ExtResource("4_ryas8")
sp_type = ""
value_to_update = "fade_asset"

[node name="BetterSlider2" parent="Scroll/MarginContainer/VBoxContainer" instance=ExtResource("4_3iye5")]
layout_mode = 2
sp_type = ""
label_text = "Fade :"
mini_value = 0.01
max_value = 10.0
step = 0.01
value = 1.0
value_to_update = "fade_speed"

[node name="BetterSlider3" parent="Scroll/MarginContainer/VBoxContainer" instance=ExtResource("4_3iye5")]
layout_mode = 2
sp_type = ""
label_text = "Asset Fade :"
mini_value = 0.01
max_value = 10.0
step = 0.01
value = 1.0
value_to_update = "fade_speed_asset"

[connection signal="toggled" from="Scroll/MarginContainer/VBoxContainer/GridContainer/AnimationReset" to="." method="_on_animation_reset_toggled"]
[connection signal="toggled" from="Scroll/MarginContainer/VBoxContainer/GridContainer/AnimationOneShot" to="." method="_on_animation_one_shot_toggled"]
[connection signal="toggled" from="Scroll/MarginContainer/VBoxContainer/GridContainer/ResetonStateChange" to="." method="_on_reseton_state_change_toggled"]
[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/EffectsGrid/RSSlider" to="." method="_on_rs_slider_value_changed"]
[connection signal="toggled" from="Scroll/MarginContainer/VBoxContainer/NonAnimatedSheetCheck" to="." method="_on_non_animated_sheet_check_toggled"]
[connection signal="mouse_entered" from="Scroll/MarginContainer/VBoxContainer/FrameHBox/FrameSpinbox" to="." method="_on_frame_spinbox_mouse_entered"]
[connection signal="value_changed" from="Scroll/MarginContainer/VBoxContainer/FrameHBox/FrameSpinbox" to="." method="_on_frame_spinbox_value_changed"]
